k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crime-map
  namespace: crime-map
  labels:
    app: crime-map
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: crime-map
