k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crime-map
  namespace: crime-map
  labels:
    app: crime-map
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  rules:
    - host: crimemap.amanops.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: crime-map
                port:
                  number: 80
